# api-gateway-ecs-razzle-dazzle

./: README.md  api_gateway.tf  cicd.tf  ecs.tf  main.tf  outputs.tf  vpc.tf
.github/workflows/: build-push.yaml
cicd/: README.md  cicd.tf  main.tf  outputs.tf
dazzle/: .dockerignore  Cargo.toml  Dockerfile  README.md
dazzle/src/: main.rs
modules/: README.md
modules/api-gateway/: main.tf  outputs.tf  variables.tf
