[package]
name = "dazzle"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.9"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
